--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
+  <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
   <link rel="stylesheet" href="css/main.css">
   <title>ohmyfood!</title>
   <meta name="title" content='ohmyfood!'>
