--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../Public/css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
   <title>Restaurant "à-la-françcaise" - ohmyfood!</title>
   <meta name="title" content='Restaurant "A la française" - ohmyfood!'>
   <meta name="description" content="Ohmyfood! est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer leur propre menu et réduire leur temps d’attente dans les restaurants.">
