--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -6,6 +6,7 @@
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../Public/css/main.css">
   <title>Restaurant "La palette du gout" - ohmyfood!</title>
+  <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
   <meta name="title" content='Restaurant "La palette du gout" - ohmyfood!'>
   <meta name="description" content="Ohmyfood! est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer leur propre menu et réduire leur temps d’attente dans les restaurants.">
 
